--- a/themes/hugo-theme-terminal/layouts/_default/baseof.html
+++ b/themes/hugo-theme-terminal/layouts/_default/baseof.html
@@ -6,6 +6,15 @@
   {{ end }}
   {{ partial "head.html" . }}
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G2VJEPJXNS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G2VJEPJXNS');
+</script>
 <body>
 {{ $container := cond ($.Site.Params.FullWidthTheme | default false) "container full" (cond ($.Site.Params.CenterTheme | default false) "container center" "container") }}
 
