added github link instead of treacker.gg

--- a/themes/hugo-theme-terminal/layouts/partials/footer.html
+++ b/themes/hugo-theme-terminal/layouts/partials/footer.html
@@ -5,7 +5,7 @@
         <span>{{ $.Site.Copyright | safeHTML }}</span>
     {{ else }}
       <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="https://tracker.gg/valorant/profile/riot/the%20moe%20lester%235744/overview?platform=pc&playlist=competitive&season=ac12e9b3-47e6-9599-8fa1-0bb473e5efc7">Kiteflinty</a></span>
+        <span>© {{ now.Year }} Powered by <a href="https://github.com/Aditya-Kumar81">Kiteflinty</a></span>
     {{ end }}
       <span>:: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Special </a> Thanks to <a href="https://www.riotgames.com/en" target="_blank">Riot</a></span>
       </div>
