canges in footer to improve SEO

--- a/themes/hugo-theme-terminal/layouts/partials/footer.html
+++ b/themes/hugo-theme-terminal/layouts/partials/footer.html
@@ -4,9 +4,12 @@
       <div class="copyright copyright--user">
         <span>{{ $.Site.Copyright | safeHTML }}</span>
     {{ else }}
-      <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="https://github.com/Aditya-Kumar81">Kiteflinty</a></span>
-    {{ end }}
+
+        <span>© {{ now.Year }} Powered by 
+   <a href="https://github.com/Aditya-Kumar81" target="_blank" rel="noopener noreferrer nofollow">Kiteflinty</a>
+</span>
+
+
       <span>:: <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Special </a> Thanks to <a href="https://www.riotgames.com/en" target="_blank">Riot</a></span>
       </div>
   </div>
